# VisionAlgorithms

./: .gitignore  GraspPoseDetector.sln  LICENSE  README.md  VisionAlgorithms.sln
AccuracyGrasp/: AccuracyGrasp.cpp  AccuracyGrasp.vcxproj  AccuracyGrasp.vcxproj.filters
AccuracyGrasp/props/: Glog 0.4.0 Release.props
AlgorithmTest/: AlgorithmTest.cpp  AlgorithmTest.vcxproj  AlgorithmTest.vcxproj.filters
AlgorithmTest/props/: JsonCpp 1.8.3 Debug.props  PCL 1.9.1 Release.props
BinPicking/: Vision_Project.txt  Vision_UserManual.docx
BinPicking/Config_1/: bin_picking.json  instance_seg_euclidean.json
X3PYExamplePligin/: ReadMe.txt  X3PYExamplePligin.cpp  X3PYExamplePligin.vcxproj  X3PYExamplePligin.vcxproj.filters  isimple.h  isimple3.h  libpln1.cpp  libpln1.h  module.cpp  stdafx.cpp
X3PYExamplePligin/props/: PCL 1.9.1 Debug.props
X3PYMainProgram/: Mysimple.h  ReadMe.txt  X3PYMainProgram.cpp  X3PYMainProgram.vcxproj  X3PYMainProgram.vcxproj.filters  isimple.h  stdafx.cpp
bin_picking/: bin_picking.cpp  bin_picking.h  bin_picking.vcxproj  bin_picking.vcxproj.filters  cpp.hint  ibin_picking.cpp  ibin_picking.h
bin_picking/prop/: PCL 1.9.1 Debug.props  PCL 1.9.1 Release.props
camera_data/: camera_data.cpp  camera_data.h  camera_data.vcxproj  camera_data.vcxproj.filters  cpp.hint  dllmain.cpp  icamera_data.cpp  icamera_data.h  resource.h  stdafx.h
camera_data/props/: JsonCpp 1.8.3 Debug.props  OpenCV 3.4.5 Release.props  PCL 1.9.1 Debug.props  PCL 1.9.1 Release.props
detection_2d/: detection_2d.cpp  detection_2d.h  detection_2d.vcxproj  detection_2d.vcxproj.filters  idetection_2d.cpp  idetection_2d.h
gpd_2.0/: GPD.vdproj
grasp_pose/: cpp.hint  gp_model_based.cpp  gp_model_based.h  grasp_pose.cpp  grasp_pose.h  grasp_pose.vcxproj  grasp_pose.vcxproj.filters
grasp_pose/prop/: OpenCV 3.4.5 Release.props
pluginInterfaceRegistration/: CMakeLists.txt  MyPointRepresentation.h  pluginInterfaceRegistration.h  pluginInterfaceRegistration_global.h
pluginPoseEstimation/: CMakeLists.txt
pluginRegistrationPCL/: CMakeLists.txt  pluginRegistrationPCL.cpp  pluginRegistrationPCL.h
pose_estimation/: dllmain.cpp  ipose_estimation.cpp  ipose_estimation.h  pose_estimation.cpp  pose_estimation.h  pose_estimation.rc  pose_estimation.vcxproj  pose_estimation.vcxproj.filters  resource.h  stdafx.h
pose_estimation/props/: OpenCV 3.4.5 Debug.props  PCL 1.9.1 Release.props
recognition/: dllmain.cpp  irecognition.h  recognition.vcxproj  recognition.vcxproj.filters  recognition_3d.cpp  recognition_3d.h  recognition_3d_cg.cpp  recognition_3d_cg.h  recognition_3d_ppf.cpp  recognition_3d_ppf.h  stdafx.h
recognition/props/: JsonCpp 1.8.3 Release.props  PCL 1.9.1 Debug.props  PCL 1.9.1 Release.props
registration_3d/: dllmain.cpp  features.cpp  features.h  iregistration_3d.h  registration_3d.cpp  registration_3d.h  registration_3d.vcxproj  registration_3d.vcxproj.filters  registration_lm_icp.cpp  registration_lm_icp.h  registration_sac_ia.cpp  registration_sac_ia.h  stdafx.h
registration_3d/props/: JsonCpp 1.8.3 Release.props  LibTorch 1.5.1 Debug.props  LibTorch 1.5.1 Release.props  LibTorch 1.5.1.props  LibTorch 1.7.0 Debug.props  LibTorch 1.7.0 Release.props  PCL 1.9.1 Debug.props
segmentation/: dllmain.cpp  isegmentation.cpp  isegmentation.h  segmentation.vcxproj  segmentation.vcxproj.filters  segmentation_boundary.cpp  segmentation_boundary.h  segmentation_euclidean.cpp  segmentation_euclidean.h  segmentation_obb.cpp  segmentation_obb.h  segmentation_sac.cpp  segmentation_sac.h  stdafx.h
segmentation_3d/: dllmain.cpp  pch.h  segmentation_3d.vcxproj
x64/Release/: !BinPicking.bat  (+3 more)
(+73 files in other folders)
